Fix scrollbar of codeblock

--- a/include/style/codeblock.styl
+++ b/include/style/codeblock.styl
@@ -75,6 +75,9 @@ figure.highlight
     .highlight-body
         overflow: auto
 
+    .highlight-body::-webkit-scrollbar-thumb
+        background-color: grey
+
     .gutter
         text-align: right
 
